# cmd/server/main.go
@@ -9,7 +9,7 @@ import (
 	"tp_final/pkg/store"
 	"tp_final/pkg/middleware"
 	"tp_final/internal/odontologo"
-	//"tp_final/internal/paciente"
+	"tp_final/internal/paciente"
 	//"tp_final/internal/turno"
 	"tp_final/cmd/server/handler"
 	"tp_final/docs"
@@ -43,9 +43,9 @@ func main() {
 	odontologoService := odontologo.NewOdontologoService(odontologoRepository)
 	odontologoHandler := handler.NewOdontologoHandler(odontologoService)
 	
-	// pacienteRepository := paciente.NewPacienteRepository(storage)
-	// pacienteService := paciente.NewPacienteService(pacienteRepository)
-	// pacienteHandler := handler.NewPacienteHandler(pacienteService)
+	pacienteRepository := paciente.NewPacienteRepository(storage)
+	pacienteService := paciente.NewPacienteService(pacienteRepository)
+	pacienteHandler := handler.NewPacienteHandler(pacienteService)
 
 	// turnoRepository := turno.NewTurnoRepository(storage)
 	// turnoService := turno.NewTurnoService(turnoRepository)
@@ -68,15 +68,15 @@ func main() {
 		odontologos.DELETE(":id", middleware.Authentication(), odontologoHandler.Delete())
 	}
 
-	// pacientes := r.Group("/pacientes")
+	pacientes := r.Group("/pacientes")
 
-	// {
-	// 	pacientes.GET(":id", pacienteHandler.GetByID())
-	// 	pacientes.POST("", middleware.Authentication(),pacienteHandler.Post())
-	// 	pacientes.PUT(":id", middleware.Authentication(), pacienteHandler.Put())
-	// 	pacientes.PATCH(":id", middleware.Authentication(), pacienteHandler.Patch())
-	// 	pacientes.DELETE(":id", middleware.Authentication(), pacienteHandler.Delete())
-	// }
+	{
+		pacientes.GET(":id", pacienteHandler.GetByID())
+		pacientes.POST("", middleware.Authentication(),pacienteHandler.Post())
+		pacientes.PUT(":id", middleware.Authentication(), pacienteHandler.Put())
+		pacientes.PATCH(":id", middleware.Authentication(), pacienteHandler.Patch())
+		pacientes.DELETE(":id", middleware.Authentication(), pacienteHandler.Delete())
+	}
 
 	// turnos := r.Group("/turnos")
 
